data/processed_chunks/chunk_1090.txt
Access multimedia content (https://openstax.org/books/introduction-python-programming/pages/
1-6-error-messages)
24
1 • Statements
Access for free at openstax.org
CONCEPTS IN PRACTICE
Parts of an error
Given the following error message:
Traceback (most recent call last):
File "/home/student/Desktop/example.py", line 2
print "test"
^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("test")?
1. What is the filename of the program?
a.
Desktop
b.
example.py
c.
test
2. On which line was the error found?
a.
1
b.
2
c.
3
3. What type of error was found?
a.
missing parentheses
b.
SyntaxError
c.
traceback
Common types of errors
Different types of errors may occur when running Python programs. When an error occurs, knowing the type